k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bravo
  labels:
    app.kubernetes.io/part-of: bravo-fintech
